objects/alycecom__Gift__c.object
<CustomObject>
    <fields>
        <fullName>alycecom__Accepted_At__c</fullName>
        <description>The date when the gift invitation was accepted by the recipient.</description>
        <inlineHelpText>The date when the gift invitation was accepted by the recipient.</inlineHelpText>
        <label>Accepted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Address_Validation_Status__c</fullName>
        <description>Status of gift within the Alyce address validation flow</description>
        <inlineHelpText>Status of gift within the Alyce address validation flow</inlineHelpText>
        <label>Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Address_Validation_Updated_At__c</fullName>
        <description>The date of the last address validation status update</description>
        <inlineHelpText>The date of the last address validation status update</inlineHelpText>
        <label>Address Validation Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Alyce_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to &quot;Alyce Campaign&quot; object in Salesforce. &quot;Alyce Campaign&quot; is hidden object used only for tech purposes.</description>
        <inlineHelpText>Link to &quot;Alyce Campaign&quot; object in Salesforce. &quot;Alyce Campaign&quot; is hidden object used only for tech purposes.</inlineHelpText>
        <label>Alyce Campaign</label>
        <referenceTo>alycecom__Alyce_Campaign__c</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Alyce_Gift_Link__c</fullName>
        <description>Link to Alyce gift landing page.</description>
        <inlineHelpText>Link to Alyce gift landing page.</inlineHelpText>
        <label>Alyce Gift Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>alycecom__Alyce_Synchronization_Information__c</fullName>
        <description>SF only tech field, contains latest synchronization errors if gift synchronization failed</description>
        <inlineHelpText>SF only tech field, contains latest synchronization errors if gift synchronization failed</inlineHelpText>
        <label>Alyce Synchronization Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Budget_Currency__c</fullName>
        <label>Budget Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Budget_Value__c</fullName>
        <label>Budget Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Campaign_Id__c</fullName>
        <formula>alycecom__Campaign__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Capture_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if recipient is required to accept sender terms</description>
        <inlineHelpText>Flag to show if recipient is required to accept sender terms</inlineHelpText>
        <label>Capture Affidavit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Capture_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if recipient is required to accept date/time to talk to sender (Calendar).</description>
        <inlineHelpText>Flag to show if recipient is required to accept date/time to talk to sender (Calendar).</inlineHelpText>
        <label>Capture Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Capture_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if recipient is required to fill his email address</description>
        <inlineHelpText>Flag to show if recipient is required to fill his email address</inlineHelpText>
        <label>Capture Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Capture_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if recipient is required to fill his phone number.</description>
        <inlineHelpText>Flag to show if recipient is required to fill his phone number.</inlineHelpText>
        <label>Capture Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Capture_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if recipient is required to answer sender&apos;s question.</description>
        <inlineHelpText>Flag to show if recipient is required to answer sender&apos;s question.</inlineHelpText>
        <label>Capture Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Choose_Options__c</fullName>
        <description>Link to choose gift and send gift invitation</description>
        <formula>IF(alycecom__Status_Id__c == 20 ,HYPERLINK(&quot;/apex/alycecom__GiftChooseOptionsSingle?id=&quot; +Id,IMAGE(&apos;/resource/alycecom__AlyceChooseButton&apos;, &apos;A&apos;,20,100)  , &apos;_parent&apos;),&apos;&apos;)</formula>
        <inlineHelpText>Link to choose gift and send gift invitation</inlineHelpText>
        <label>Choose Gift Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Description__c</fullName>
        <description>Description of a product claimed by recipient.</description>
        <inlineHelpText>Description of a product claimed by recipient.</inlineHelpText>
        <label>Claimed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Gift_Cost_Value__c</fullName>
        <description>This field matches the final cost, to customers, of accepted gifts, based on the accepted product</description>
        <label>Claimed Gift Cost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Gift_Cost__c</fullName>
        <formula>IF(
NOT( ISBLANK(alycecom__Claimed_Gift_Cost_Value__c) ),
alycecom__Budget_Currency__c + &apos; &apos;+ TEXT( alycecom__Claimed_Gift_Cost_Value__c),
&apos;&apos;
)</formula>
        <label>Claimed Gift Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Gift_Image__c</fullName>
        <description>Product images URLs of a product claimed by recipient.</description>
        <inlineHelpText>Product images URLs of a product claimed by recipient.</inlineHelpText>
        <label>Claimed Gift Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Image__c</fullName>
        <description>SF only field, it show image based on link stored in Claimed_Gift_Image__c</description>
        <formula>IF(ISBLANK(alycecom__Claimed_Gift_Image__c) , &apos;&apos;, IMAGE( alycecom__Claimed_Gift_Image__c , &apos;A&apos; , 300, 300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SF only field, it show image based on link stored in Claimed_Gift_Image__c</inlineHelpText>
        <label>Claimed Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Merchant_Name__c</fullName>
        <description>Merchant name of a product claimed by recipient.</description>
        <inlineHelpText>Merchant name of a product claimed by recipient.</inlineHelpText>
        <label>Claimed Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Product_Name__c</fullName>
        <description>Name of a product claimed by recipient.</description>
        <inlineHelpText>Name of a product claimed by recipient.</inlineHelpText>
        <label>Claimed Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Special_Description_Name__c</fullName>
        <description>Title for special description block (for example: &quot;Details&quot;, &quot;Notes&quot;, etc.)</description>
        <inlineHelpText>Title for special description block (for example: &quot;Details&quot;, &quot;Notes&quot;, etc.)</inlineHelpText>
        <label>Claimed Special Description Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Claimed_Special_Description__c</fullName>
        <description>Extended description (useful notes or details) of product claimed by recipient</description>
        <inlineHelpText>Extended description (useful notes or details) of product claimed by recipient</inlineHelpText>
        <label>Claimed Special Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>alycecom__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Created_At__c</fullName>
        <description>The date when the gift was created by the sender.</description>
        <inlineHelpText>The date when the gift was created by the sender.</inlineHelpText>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Date_Of_Meeting__c</fullName>
        <description>Meeting Date &amp; Time selected by recipient on Sender&apos;s calendar</description>
        <inlineHelpText>Meeting Date &amp; Time selected by recipient on Sender&apos;s calendar</inlineHelpText>
        <label>Recipient Selected Meeting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Declined_On__c</fullName>
        <description>Date that recipient declined gift</description>
        <inlineHelpText>Date that recipient declined gift</inlineHelpText>
        <label>Declined On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Delivery_Method__c</fullName>
        <description>Method selected for delivering gift invitation</description>
        <inlineHelpText>Method selected for delivering gift invitation</inlineHelpText>
        <label>Gift Invitation Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Handwritten Card</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>alycecom__Description__c</fullName>
        <description>Description of the gift selected for the recipient</description>
        <inlineHelpText>Description of the gift selected for the recipient</inlineHelpText>
        <label>Gift Description</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>alycecom__Disabled_At__c</fullName>
        <description>The date when the gift invitation was disabled by the sender.</description>
        <inlineHelpText>The date when the gift invitation was disabled by the sender.</inlineHelpText>
        <label>Disabled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Expired_At__c</fullName>
        <description>Date that gift expired</description>
        <inlineHelpText>Date that gift expired</inlineHelpText>
        <label>Expired At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Budget__c</fullName>
        <description>Budget amount set for gift</description>
        <formula>IF(
 NOT( ISBLANK(alycecom__Budget_Value__c) ),
 alycecom__Budget_Currency__c + &apos; &apos;+  TEXT( alycecom__Budget_Value__c),
 &apos;&apos; 
)</formula>
        <inlineHelpText>Budget amount set for gift</inlineHelpText>
        <label>Gift Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Finalized__c</fullName>
        <description>Date that gift was purchased and sent to recipient</description>
        <inlineHelpText>Date that gift was purchased and sent to recipient</inlineHelpText>
        <label>Gift Finalized</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Id__c</fullName>
        <description>Gift unique hash id</description>
        <inlineHelpText>Gift unique hash id</inlineHelpText>
        <label>Gift Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Image__c</fullName>
        <description>Product images URLs of product sent by recipient.</description>
        <inlineHelpText>Product images URLs of product sent by recipient.</inlineHelpText>
        <label>Gift Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Invitation_Record__c</fullName>
        <formula>IF( alycecom__Gift_Name__c != null, 
HYPERLINK(&quot;/&quot;+ Id , alycecom__Gift_Name__c ,&apos;_parent&apos;), 
HYPERLINK(&quot;/&quot;+ Id , alycecom__Sender_Status_Label__c +&quot; for &quot;+ alycecom__Recipient_Name__c ,&apos;_parent&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Invitation Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Message__c</fullName>
        <description>Gift message submitted by Sender.</description>
        <inlineHelpText>Gift message submitted by Sender.</inlineHelpText>
        <label>Gift Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Name__c</fullName>
        <description>Name of the gift selected for the recipient</description>
        <inlineHelpText>Name of the gift selected for the recipient</inlineHelpText>
        <label>Gift Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Owner__c</fullName>
        <formula>IF(
  ISBLANK(Owner:User.Id),
  HYPERLINK(&quot;/&quot;+  OwnerId  , Owner:Queue.QueueName ,&apos;_parent&apos;), 
  HYPERLINK(&quot;/&quot;+  OwnerId  , Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName ,&apos;_parent&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Reference__c</fullName>
        <label>Gift Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perfectly matched</fullName>
                    <default>true</default>
                    <label>Perfectly matched</label>
                </value>
                <value>
                    <fullName>Not too personal</fullName>
                </value>
                <value>
                    <fullName>Shareable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Request_Id__c</fullName>
        <description>Salesforce only tech field</description>
        <inlineHelpText>Salesforce only tech field</inlineHelpText>
        <label>Gift Request Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Gift_Send_Label__c</fullName>
        <description>Label of the gift delivery method displayed on the gift list</description>
        <inlineHelpText>Label of the gift delivery method displayed on the gift list</inlineHelpText>
        <label>Gift Send Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Image__c</fullName>
        <description>Image of the gift selected for the recipient</description>
        <formula>IF(ISBLANK(alycecom__Gift_Image__c) , &apos;&apos;, IMAGE( alycecom__Gift_Image__c , &apos;A&apos; , 300, 300))</formula>
        <inlineHelpText>Image of the gift selected for the recipient</inlineHelpText>
        <label>Gift Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Invitation_Delivered_At__c</fullName>
        <description>The date when the gift invitation was delivered (as reported by USPS)</description>
        <inlineHelpText>The date when the gift invitation was delivered (as reported by USPS)</inlineHelpText>
        <label>Invitation Delivered At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Invitation_Sent_For_Fulfilment__c</fullName>
        <description>Date that gift invitation was sent for fulfilment and shipping</description>
        <inlineHelpText>Date that gift invitation was sent for fulfilment and shipping</inlineHelpText>
        <label>Invitation Sent For Fulfilment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Is_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if Gift Invitation email has bounced</description>
        <inlineHelpText>Flag to show if Gift Invitation email has bounced</inlineHelpText>
        <label>Is Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Is_Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if Gift has been accepted by recipient</description>
        <inlineHelpText>Flag to show if Gift has been accepted by recipient</inlineHelpText>
        <label>Is Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Is_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if Gift has been declined by recipient</description>
        <inlineHelpText>Flag to show if Gift has been declined by recipient</inlineHelpText>
        <label>Is Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if Gift has expired</description>
        <inlineHelpText>Flag to show if Gift has expired</inlineHelpText>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Merchant_Name__c</fullName>
        <description>Merchant name of the gift selected for the recipient</description>
        <inlineHelpText>Merchant name of the gift selected for the recipient</inlineHelpText>
        <label>Gift Merchant Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__More_Info_Requested__c</fullName>
        <description>Date that information requested from Sender</description>
        <inlineHelpText>Date that information requested from Sender</inlineHelpText>
        <label>More Info Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>alycecom__Options_Ready_At__c</fullName>
        <description>The date when the Alyce recommended gift(s) are provided to the sender</description>
        <inlineHelpText>The date when the Alyce recommended gift(s) are provided to the sender</inlineHelpText>
        <label>Options Ready At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Options_Ready_Notified__c</fullName>
        <description>List of email addresses who has already received notifications about event that products were proposed</description>
        <inlineHelpText>List of email addresses who has already received notifications about event that products were proposed</inlineHelpText>
        <label>Options Ready Notified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Options_Ready_Notifiers__c</fullName>
        <description>List of email addresses whom we need to send notifications about event that products were proposed.</description>
        <inlineHelpText>List of email addresses whom we need to send notifications about event that products were proposed.</inlineHelpText>
        <label>Options Ready Notifiers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Email__c</fullName>
        <description>Recipient&apos;s email address (provided by sender)</description>
        <inlineHelpText>Recipient&apos;s email address (provided by sender)</inlineHelpText>
        <label>Recipient Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Feedback__c</fullName>
        <description>Feedback provided by recipient if gift was declined</description>
        <inlineHelpText>Feedback provided by recipient if gift was declined</inlineHelpText>
        <label>Recipient Gift Declined Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_First_Name__c</fullName>
        <description>Gift recipient first name</description>
        <inlineHelpText>Gift recipient first name</inlineHelpText>
        <label>Recipient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Gift_Declined_Reason__c</fullName>
        <label>Recipient Gift Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Last_Name__c</fullName>
        <description>Gift recipient last name</description>
        <inlineHelpText>Gift recipient last name</inlineHelpText>
        <label>Recipient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Link__c</fullName>
        <formula>IF( alycecom__Contact__c != null, 
HYPERLINK(&quot;/&quot;+ alycecom__Contact__c, alycecom__Recipient_Name__c ,&apos;_parent&apos;),
IF( alycecom__Lead__c != null, 
HYPERLINK(&quot;/&quot;+ alycecom__Lead__c , alycecom__Recipient_Name__c ,&apos;_parent&apos;),
alycecom__Recipient_Name__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Name__c</fullName>
        <description>Recipient&apos;s full name (provided by sender)</description>
        <inlineHelpText>Recipient&apos;s full name (provided by sender)</inlineHelpText>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Answer__c</fullName>
        <description>Answer provided by recipient to a question asked by sender</description>
        <inlineHelpText>Answer provided by recipient to a question asked by sender</inlineHelpText>
        <label>Response Provided: Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Email__c</fullName>
        <description>Email provided by recipient</description>
        <inlineHelpText>Email provided by recipient</inlineHelpText>
        <label>Response Provided: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Meeting__c</fullName>
        <description>The date and time that gift recipient has selected for a meeting time</description>
        <inlineHelpText>The date and time that gift recipient has selected for a meeting time</inlineHelpText>
        <label>Recipient Provided Meeting Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Message__c</fullName>
        <description>Recipient message submitted in response to gift invitation.</description>
        <inlineHelpText>Recipient message submitted in response to gift invitation.</inlineHelpText>
        <label>Recipient Response Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Phone__c</fullName>
        <description>Phone Number provided by recipient</description>
        <inlineHelpText>Phone Number provided by recipient</inlineHelpText>
        <label>Response Provided: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Requested__c</fullName>
        <description>Date that additional information requested from recipient to process gift</description>
        <inlineHelpText>Date that additional information requested from recipient to process gift</inlineHelpText>
        <label>Recipient Response Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Recipient_Response_Sign__c</fullName>
        <description>Agreement with sender&apos;s terms given by recipient</description>
        <inlineHelpText>Agreement with sender&apos;s terms given by recipient</inlineHelpText>
        <label>Recipient Response Sign</label>
        <length>16383</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>alycecom__Reminder_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if reminder email has been sent to recipient</description>
        <inlineHelpText>Flag to show if reminder email has been sent to recipient</inlineHelpText>
        <label>Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Sender_Status_Label__c</fullName>
        <description>The current status of the gift invitation.</description>
        <inlineHelpText>The current status of the gift invitation.</inlineHelpText>
        <label>Gift Invitation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Sender_Status_Name__c</fullName>
        <label>Sender Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_At__c</fullName>
        <description>The date when the gift invitation has completed processing, and is on its way to the recipient</description>
        <inlineHelpText>The date when the gift invitation has completed processing, and is on its way to the recipient</inlineHelpText>
        <label>Invitation Sent At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_By_Email__c</fullName>
        <description>Email address of person who the gift is being sent as</description>
        <inlineHelpText>Email address of person who the gift is being sent as</inlineHelpText>
        <label>Sent By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_By_Name__c</fullName>
        <description>Name of person who the gift is being sent as</description>
        <inlineHelpText>Name of person who the gift is being sent as</inlineHelpText>
        <label>Sent By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_From_Email__c</fullName>
        <description>Email address of person who processed the sending of the gift</description>
        <inlineHelpText>Email address of person who processed the sending of the gift</inlineHelpText>
        <label>Sent As Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_From_Name__c</fullName>
        <description>Name of person who processed the sending of the gift</description>
        <inlineHelpText>Name of person who processed the sending of the gift</inlineHelpText>
        <label>Sent As Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_To_Fulfillment_At__c</fullName>
        <description>Date when gift has been sent for Fulfillment</description>
        <inlineHelpText>Date when gift has been sent for Fulfillment</inlineHelpText>
        <label>Sent To Fulfillment At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Sent_To_Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field represents fulfillment status</description>
        <inlineHelpText>This field represents fulfillment status</inlineHelpText>
        <label>Sent To Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Status_Id__c</fullName>
        <description>Internal ID of current Alyce gift status</description>
        <inlineHelpText>Internal ID of current Alyce gift status</inlineHelpText>
        <label>Gift Status ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Status_Update_Timestamp__c</fullName>
        <description>Date of the last status update</description>
        <label>Status Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Team_Id__c</fullName>
        <description>Internal ID for Alyce team</description>
        <inlineHelpText>Internal ID for Alyce team</inlineHelpText>
        <label>Team Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__The_Meeting_Was_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to show if recipient attended booked meeting.</description>
        <inlineHelpText>Flag to show if recipient attended booked meeting.</inlineHelpText>
        <label>The Meeting Was Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Tracking_Link__c</fullName>
        <description>A tracking link is provided once your gift invitation has been sent.</description>
        <inlineHelpText>A tracking link is provided once your gift invitation has been sent.</inlineHelpText>
        <label>Tracking Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>alycecom__Tracking_Number__c</fullName>
        <description>Tracking number for status of gift invitation delivery</description>
        <inlineHelpText>Tracking number for status of gift invitation delivery</inlineHelpText>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Tracking_State__c</fullName>
        <description>Status of gift invitation delivery as provided by Shippo</description>
        <inlineHelpText>Status of gift invitation delivery as provided by Shippo</inlineHelpText>
        <label>Tracking Delivery Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Viewed_At__c</fullName>
        <description>The date when the gift invitation was viewed by the recipient on Alyce.com</description>
        <inlineHelpText>The date when the gift invitation was viewed by the recipient on Alyce.com</inlineHelpText>
        <label>Viewed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Work_Location__c</fullName>
        <description>Recipient Company Name submitted by Sender</description>
        <inlineHelpText>Recipient Company Name submitted by Sender</inlineHelpText>
        <label>Work Location</label>
        <type>TextArea</type>
    </fields>
    <label>Gift</label>
    <listViews>
        <fullName>alycecom__All</fullName>
        <columns>alycecom__Gift_Invitation_Record__c</columns>
        <columns>alycecom__Campaign__c</columns>
        <columns>alycecom__Sender_Status_Label__c</columns>
        <columns>alycecom__Choose_Options__c</columns>
        <columns>alycecom__Delivery_Method__c</columns>
        <columns>alycecom__Invitation_Delivered_At__c</columns>
        <columns>alycecom__Sent_At__c</columns>
        <columns>alycecom__Accepted_At__c</columns>
        <columns>alycecom__Recipient_Link__c</columns>
        <columns>alycecom__Gift_Owner__c</columns>
        <columns>alycecom__Gift_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{0000000}</displayFormat>
        <label>Gift Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>alycecom__Gift_Id_Not_To_Be_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(alycecom__Gift_Id__c))),
ISCHANGED(alycecom__Gift_Id__c)
)</errorConditionFormula>
        <errorDisplayField>alycecom__Gift_Id__c</errorDisplayField>
        <errorMessage>You Cannot Change The Gift Id.</errorMessage>
    </validationRules>
</CustomObject>